# git-metrics

./: .git-metrics.toml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  action.yml  cross.Dockerfile  readme.md  rust-toolchain.toml
.github/: FUNDING.yml  dependabot.yml
.github/actions/download-artifacts/: action.yml
.github/actions/download-binaries/: action.yml
.github/actions/git-user/: action.yml
.github/actions/last-commit/: action.yml
.github/actions/persist-metrics/: action.yml
.github/workflows/: build.yml  code-testing.yml  commit-lint.yml  dogfooding.yml  integration.yml  pull-request-build.yml  release-plz.yml  release.yml
.github/workflows-old/: commit-lint.yml
asset/: lcov.info
scripts/: binary-size.sh
src/: entity.rs  error.rs  main.rs  metric.rs  repository.rs
src/backend/: command.rs  git2.rs  mock.rs  mod.rs
src/cmd/: add.rs  check.rs  diff.rs  init.rs  log.rs  mod.rs  prelude.rs  pull.rs  push.rs  remove.rs  show.rs
src/cmd/check/: format.rs  format_text_by_default.txt  format_text_with_success_showed.txt  mod.rs
src/cmd/check/format/: format_md_by_default.md  format_md_with_success_showed.md  format_text_by_default.txt  format_text_with_success_showed.txt  html.rs  markdown.rs  mod.rs  text.rs
src/cmd/diff/: format.rs  mod.rs
src/cmd/diff/format/: markdown.rs  mod.rs  text.rs
src/cmd/export/: json.rs  markdown.rs  mod.rs
src/cmd/format/: mod.rs  text.rs
src/cmd/import/: lcov.rs  mod.rs
src/cmd/log/: format.rs  mod.rs
src/config/: mod.rs
src/entity/: check.rs  config.rs  difference.rs  git.rs  log.rs  metric.rs  mod.rs
src/exporter/: json.rs  markdown.rs  mod.rs
src/formatter/: difference.rs  metric.rs  mod.rs  percent.rs  rule.rs
src/importer/: lcov.rs  mod.rs
src/repository/: command.rs  git2.rs  mod.rs
src/service/: add.rs  check.rs  diff.rs  log.rs  mod.rs  pull.rs  push.rs  remove.rs  show.rs
src/tests/: check_budget.rs  conflict_different.rs  display_diff.rs  mod.rs  simple_use_case.rs
