[package]
name = "git-metrics"
description = "A git extension to store metrics directly in git, using the notes."
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
license = "MIT"
version = "0.2.7"
edition = "2021"
repository = "https://github.com/jdrouet/git-metrics"

[package.metadata.deb]
license-file = ["LICENSE", "4"]
section = "utility"

[features]
default = [
    "exporter-json",
    "exporter-markdown",
    "importer-lcov",
    "impl-command",
    "impl-git2",
]
exporter = []
exporter-json = ["exporter", "dep:serde_json"]
exporter-markdown = ["exporter"]
importer = []
importer-noop = ["importer"]
importer-lcov = ["importer", "dep:lcov"]
impl-command = []
impl-git2 = ["dep:git2", "dep:auth-git2"]

[dependencies]
another-html-builder = "0.2"
auth-git2 = { version = "0.5", optional = true, features = ["log"] }
clap = { version = "4.5", features = ["derive", "env"] }
git2 = { version = "0.20", optional = true }
human-number = { version = "0.1" }
indexmap = { version = "2.10", features = ["serde"] }
lcov = { version = "0.8", optional = true }
nu-ansi-term = { version = "0.50" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"], optional = true }
thiserror = { version = "2.0" }
toml = { version = "0.9", features = ["preserve_order"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

[dev-dependencies]
mockall = "0.13"
similar-asserts = "1.7"
tempfile = "3.20"
test-case = "3.3"
